added buttons and main HTML skeleton

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
         <link rel="stylesheet" href=./assets/css/style.css>
     </head>
     <body>
-        
+        <main id=grid>
+            <div>
+                <div>previous number</div>
+                <div>current number</div>
+            </div>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>+/-</button>
+            <button>del</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>x</button>
+            <button>/</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>=</button>
+            <button>C</button>
+            <button>0</button>
+            <button>.</button>
+            <button>+</button>
+        </main>
+        <script type="text/js" src="assets/js/script.js"></script>
     </body>
 </html>
