created basic layout and added styling to calculator

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <main id=grid>
-            <div>
+            <div id=display>
                 <div>previous number</div>
                 <div>current number</div>
             </div>
@@ -25,7 +25,8 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>=</button>
+            <button>-</button>
+            <button id=equals>=</button>
             <button>C</button>
             <button>0</button>
             <button>.</button>
