added event listeners and query selectors for each element

--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
     <body>
         <main id=grid>
             <div id=display>
-                <div>previous number</div>
-                <div>current number</div>
+                <div id=previous>previous number +</div>
+                <div id=current>current number</div>
             </div>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>+/-</button>
-            <button>del</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>x</button>
-            <button>/</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
-            <button id=equals>=</button>
-            <button>C</button>
-            <button>0</button>
-            <button>.</button>
-            <button>+</button>
+            <button id=seven>7</button>
+            <button id=eight>8</button>
+            <button id=nine>9</button>
+            <button id=invert>+/-</button>
+            <button id=delete>del</button>
+            <button id=four>4</button>
+            <button id=five>5</button>
+            <button id=six>6</button>
+            <button id=times>x</button>
+            <button id=divide>/</button>
+            <button id=one>1</button>
+            <button id=two>2</button>
+            <button id=three>3</button>
+            <button id=minus>-</button>
+            <button id=equal>=</button>
+            <button id=clear>C</button>
+            <button id=zero>0</button>
+            <button id=decimal>.</button>
+            <button id=plus>+</button>
         </main>
-        <script type="text/js" src="assets/js/script.js"></script>
+        <script src="assets/js/script.js"></script>
     </body>
 </html>
