--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
     <body>
         <main id=grid>
             <div id=display>
-                <div id=previous>previous number +</div>
-                <div id=current>current number</div>
+                <div id=previous data-previous-operand>previous number +</div>
+                <div id=current data-current-operand>current number</div>
             </div>
-            <button id=seven>7</button>
-            <button id=eight>8</button>
-            <button id=nine>9</button>
-            <button id=invert>+/-</button>
-            <button id=delete>del</button>
-            <button id=four>4</button>
-            <button id=five>5</button>
-            <button id=six>6</button>
-            <button id=times>x</button>
-            <button id=divide>/</button>
-            <button id=one>1</button>
-            <button id=two>2</button>
-            <button id=three>3</button>
-            <button id=minus>-</button>
-            <button id=equal>=</button>
-            <button id=clear>C</button>
-            <button id=zero>0</button>
-            <button id=decimal>.</button>
-            <button id=plus>+</button>
+            <button data-number>7</button>
+            <button data-number>8</button>
+            <button data-number>9</button>
+            <button data-invert>+/-</button>
+            <button data-delete>del</button>
+            <button data-number>4</button>
+            <button data-number>5</button>
+            <button data-number>6</button>
+            <button data-operation>x</button>
+            <button data-operation>/</button>
+            <button data-number>1</button>
+            <button data-number>2</button>
+            <button data-number>3</button>
+            <button data-operation>-</button>
+            <button data-equals>=</button>
+            <button data-clear>C</button>
+            <button data-number>0</button>
+            <button data-number>.</button>
+            <button data-operation>+</button>
         </main>
         <script src="assets/js/script.js"></script>
     </body>
