added appendNumber function

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <main id=grid>
             <div id=display>
-                <div id=previous data-previous-operand>previous number +</div>
-                <div id=current data-current-operand>current number</div>
+                <div id=previous data-previous-operand></div>
+                <div id=current data-current-operand></div>
             </div>
             <button data-number>7</button>
             <button data-number>8</button>
