--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
         <link rel="stylesheet" href=./assets/css/style.css>
     </head>
     <body>
+        <main>
+            <div id= display class=row data-display></div>
+            <button class=greybutton data-clear>C</button>
+            <button class=greybutton data-invert>+/-</button>
+            <button class=greybutton data-percentile>%</button>
+            <button class=orangebutton data-operation>÷</button>
+            <button class=darkgreybutton data-number>7</button>
+            <button class=darkgreybutton data-number>8</button>
+            <button class=darkgreybutton data-number>9</button>
+            <button class=orangebutton data-operation>x</button>
+            <button class=darkgreybutton data-number>4</button>
+            <button class=darkgreybutton data-number>5</button>
+            <button class=darkgreybutton data-number>6</button>
+            <button class=orangebutton data-operation>-</button>
+            <button class=darkgreybutton data-number>1</button>
+            <button class=darkgreybutton data-number>2</button>
+            <button class=darkgreybutton data-number>3</button>
+            <button class=orangebutton data-operation>+</button>
+            <button class=darkgreybutton id = zero data-number>0</button>
+            <button class=darkgreybutton data-number>.</button>
+            <button class=orangebutton data-equals>=</button>
+        </main>
         <script src="assets/js/script.js"></script>
     </body>
 </html>
