added styling to buttons to clone display of iPhone Calculator

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class=orangebutton data-operation>+</button>
             <button class=darkgreybutton id = zero data-number>0</button>
             <button class=darkgreybutton data-number>.</button>
-            <button class=orangebutton data-equals>=</button>
+            <button id = equals data-equals>=</button>
         </main>
         <script src="assets/js/script.js"></script>
     </body>
