--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Calculator</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=a">
         <link rel="stylesheet" href=./assets/css/reset.css>
         <link rel="stylesheet" href=./assets/css/style.css>
     </head>
